vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 764
expression: normalize_snapshot_paths(rendered)
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p vac-core -- --exact…


› Ask VAC to do anything

  gpt-5.5 auto · /tmp/project
